BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Concur_Settings_vod__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Concur Expense System integration settings</description>
    <fields>
        <fullName>Attendee_Customized_Fields_vod__c</fullName>
        <description>A configurable field for mapping custom veeva fields to any concur field.</description>
        <label>Attendee Customized Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Attendee_Mapping_vod__c</fullName>
        <description>A configurable field for mapping a Salesforce field to a Concur field at the Call Attendee level.</description>
        <label>Call Attendee Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Mapping_vod__c</fullName>
        <description>A configurable field for mapping a Salesforce field to a Concur field at the Call level.</description>
        <label>Call Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Primary_Attendee_Mapping_vod__c</fullName>
        <description>A configurable field for mapping a Salesforce field to a Concur field at the Call Primary Attendee level.</description>
        <label>Call Primary Attendee Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Domain_vod__c</fullName>
        <description>Concur Expense System integration application company domain</description>
        <label>Company Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concur_Admin_Username_vod__c</fullName>
        <description>Storage of the Concur Web Services Admin username.</description>
        <label>Concur Admin Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concur_Select_Mode_vod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Determines which Objects to sync to Concur. If value is 0, then syncs both Calls and Medical Events. If value is 1, then syncs only Calls. If value is 2, then syncs only Medical Events. Note: Defaults to option 0 (both Calls and Medical Events) if an incorrect value is entered.</description>
        <label>Concur Select Mode</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Notification_Recipients_vod__c</fullName>
        <description>Comma separated list of email addresses that will receive any notification emails related to the Concur integration.</description>
        <label>Email Notification Recipients</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Customized_Fields_vod__c</fullName>
        <description>Map Concur Expense report custom fields to Veeva Call report fields
Custom15=Total_Expense_Attendees_Count_vod__c,Custom16=Id</description>
        <label>Expense Customized Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Key_vod__c</fullName>
        <description>Concur Expense report entry expense key type. The default value is &quot;BUSML&quot; if this field is blank.</description>
        <label>Expense Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Event_Attendee_Mapping_vod__c</fullName>
        <description>A configurable field for mapping a Salesforce field to a Concur field at the Medical Event Attendee level.</description>
        <label>Medical Event Attendee Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Event_Mapping_vod__c</fullName>
        <description>A configurable field for mapping a Salesforce field to a Concur field at the Medical Event level.</description>
        <label>Medical Event Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Key_vod__c</fullName>
        <description>Concur Expense System integration oauth key</description>
        <label>OAuth Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Secret_vod__c</fullName>
        <description>Concur Expense System integration oauth secret</description>
        <label>OAuth Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Token_vod__c</fullName>
        <description>Storage of the OAuth Token from Concur</description>
        <label>OAuth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Attendees_Type_vod__c</fullName>
        <description>A value to determine what the type of attendee is on the call report. This type is posted to Concur as the Attendee&apos;s designation.</description>
        <label>Other Attendees Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type_vod__c</fullName>
        <description>This is where the payment type is stored for all expenses posted to concur. &quot;Pending Card Charge&quot; is the default Payment Type.</description>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Concur Settings</label>
</CustomObject>